[workspace]
members = [
    "core",
    "services",
    "lite-rpc",
    "quic-forward-proxy",
    "quic-forward-proxy-integration-test",
    "cluster-endpoints",
    "history",
    "bench"
]

[workspace.package]
version = "0.2.3"
authors = ["gmgalactus <gmgalactus@mango.markets>", "Aniket Prajapati <contact@aniketprajapati.me>"]
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"
edition = "2021"

[workspace.dependencies]
solana-sdk = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.16.21-jito" }
solana-rpc-client = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.16.21-jito" }
solana-rpc-client-api = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.16.21-jito" }
solana-transaction-status = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.16.21-jito" }
solana-version = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.16.21-jito" }
solana-client = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.16.21-jito" }
solana-net-utils = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.16.21-jito" }
solana-pubsub-client = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.16.21-jito" }
solana-streamer = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.16.21-jito" }
itertools = "0.10.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
bincode = "1.3.3"
bs58 = "0.4.0"
base64 = "0.21.0"
thiserror = "1.0.40"
futures = "0.3.28"
bytes = "1.4.0"
anyhow = "1.0.70"
log = "0.4.17"
clap = { version = "4.2.4", features = ["derive", "env"] }
dashmap = "5.4.0"
const_env = "0.1.2"
jsonrpsee = { version = "0.17.0", features = ["macros", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.24"
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
prometheus = "0.13.3"
lazy_static = "1.4.0"
dotenv = "0.15.0"
async-channel = "1.8.0"
quinn = "0.9.3"
rustls = { version = "=0.20.8", default-features = false }
solana-lite-rpc-services = {path = "services", version="0.2.3"}
solana-lite-rpc-core = {path = "core", version="0.2.3"}
solana-lite-rpc-cluster-endpoints = {path = "cluster-endpoints", version="0.2.3"}
solana-lite-rpc-history = {path = "history", version="0.2.3"}

async-trait = "0.1.68"
yellowstone-grpc-client = "1.9.0"
yellowstone-grpc-proto = "1.9.0"